fix(scss): mobile responsive design and text-wrap/clamp

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -2,4 +2,13 @@
   font-family: Roboto, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    text-wrap: balance;
+  }
 }
